@@ -46,6 +46,7 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
         
         m_Dirty = dirty;
         m_jTaxID.getDocument().addDocumentListener(dirty);
+        m_jSearchkey.getDocument().addDocumentListener(dirty);
         m_jName.getDocument().addDocumentListener(dirty);
         m_jAddress.getDocument().addDocumentListener(dirty);
         m_jNotes.getDocument().addDocumentListener(dirty);
@@ -58,6 +59,7 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
     public void writeValueEOF() {
         m_oId = null;
         m_jTaxID.setText(null);
+        m_jSearchkey.setText(null);
         m_jName.setText(null);
         m_jAddress.setText(null);
         m_jNotes.setText(null);
@@ -67,6 +69,7 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
         m_jVisible.setSelected(false);
         jcard.setText(null);
         m_jTaxID.setEnabled(false);
+        m_jSearchkey.setEnabled(false);
         m_jName.setEnabled(false);
         m_jAddress.setEnabled(false);
         m_jNotes.setEnabled(false);
@@ -82,6 +85,7 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
     public void writeValueInsert() {
         m_oId = null;
         m_jTaxID.setText(null);
+        m_jSearchkey.setText(null);
         m_jName.setText(null);
         m_jAddress.setText(null);
         m_jNotes.setText(null);
@@ -91,6 +95,7 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
         m_jVisible.setSelected(true);
         jcard.setText(null);
         m_jTaxID.setEnabled(true);
+        m_jSearchkey.setEnabled(true);
         m_jName.setEnabled(true);
         m_jAddress.setEnabled(true);
         m_jNotes.setEnabled(true);
@@ -107,15 +112,17 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
         Object[] customer = (Object[]) value;
         m_oId = customer[0];
         m_jTaxID.setText((String) customer[1]);
-        m_jName.setText((String) customer[2]);
-        m_jAddress.setText((String) customer[3]);
-        m_jNotes.setText((String) customer[4]);
-        m_jVisible.setSelected(((Boolean) customer[5]).booleanValue());
-        jcard.setText((String) customer[6]);
-        txtMaxdebt.setText(Formats.CURRENCY.formatValue(customer[7]));
-        txtCurdate.setText(Formats.DATE.formatValue(customer[8]));        
-        txtCurdebt.setText(Formats.CURRENCY.formatValue(customer[9]));        
+        m_jSearchkey.setText((String) customer[2]);
+        m_jName.setText((String) customer[3]);
+        m_jAddress.setText((String) customer[4]);
+        m_jNotes.setText((String) customer[5]);
+        m_jVisible.setSelected(((Boolean) customer[6]).booleanValue());
+        jcard.setText((String) customer[7]);
+        txtMaxdebt.setText(Formats.CURRENCY.formatValue(customer[8]));
+        txtCurdate.setText(Formats.DATE.formatValue(customer[9]));        
+        txtCurdebt.setText(Formats.CURRENCY.formatValue(customer[10]));        
         m_jTaxID.setEnabled(false);
+        m_jSearchkey.setEnabled(false);
         m_jName.setEnabled(false);
         m_jAddress.setEnabled(false);
         m_jNotes.setEnabled(false);
@@ -131,16 +138,18 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
     public void writeValueEdit(Object value) {
         Object[] customer = (Object[]) value;
         m_oId = customer[0];
-        m_jTaxID.setText((String) customer[1]);        
-        m_jName.setText((String) customer[2]);
-        m_jAddress.setText((String) customer[3]);
-        m_jNotes.setText((String) customer[4]);     
-        m_jVisible.setSelected(((Boolean) customer[5]).booleanValue());
-        jcard.setText((String) customer[6]);
-        txtMaxdebt.setText(Formats.CURRENCY.formatValue(customer[7]));
-        txtCurdate.setText(Formats.DATE.formatValue(customer[8]));        
-        txtCurdebt.setText(Formats.CURRENCY.formatValue(customer[9]));          
+        m_jTaxID.setText((String) customer[1]);
+        m_jSearchkey.setText((String) customer[2]);
+        m_jName.setText((String) customer[3]);
+        m_jAddress.setText((String) customer[4]);
+        m_jNotes.setText((String) customer[5]);
+        m_jVisible.setSelected(((Boolean) customer[6]).booleanValue());
+        jcard.setText((String) customer[7]);
+        txtMaxdebt.setText(Formats.CURRENCY.formatValue(customer[8]));
+        txtCurdate.setText(Formats.DATE.formatValue(customer[9]));        
+        txtCurdebt.setText(Formats.CURRENCY.formatValue(customer[10]));           
         m_jTaxID.setEnabled(true);
+        m_jSearchkey.setEnabled(true);
         m_jName.setEnabled(true);
         m_jAddress.setEnabled(true);
         m_jNotes.setEnabled(true);
@@ -154,17 +163,18 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
     }
     
     public Object createValue() throws BasicException {
-        Object[] customer = new Object[10];
+        Object[] customer = new Object[11];
         customer[0] = m_oId == null ? UUID.randomUUID().toString() : m_oId;
         customer[1] = m_jTaxID.getText();
-        customer[2] = m_jName.getText();
-        customer[3] = m_jAddress.getText();
-        customer[4] = m_jNotes.getText();
-        customer[5] = Boolean.valueOf(m_jVisible.isSelected());
-        customer[6] = Formats.STRING.parseValue(jcard.getText()); // Format to manage NULL values
-        customer[7] = Formats.CURRENCY.parseValue(txtMaxdebt.getText(), new Double(0.0));
-        customer[8] = Formats.TIMESTAMP.parseValue(txtCurdate.getText()); // not saved
-        customer[9] = Formats.CURRENCY.parseValue(txtCurdebt.getText()); // not saved
+        customer[2] = m_jSearchkey.getText();
+        customer[3] = m_jName.getText();
+        customer[4] = m_jAddress.getText();
+        customer[5] = m_jNotes.getText();
+        customer[6] = Boolean.valueOf(m_jVisible.isSelected());
+        customer[7] = Formats.STRING.parseValue(jcard.getText()); // Format to manage NULL values
+        customer[8] = Formats.CURRENCY.parseValue(txtMaxdebt.getText(), new Double(0.0));
+        customer[9] = Formats.TIMESTAMP.parseValue(txtCurdate.getText()); // not saved
+        customer[10] = Formats.CURRENCY.parseValue(txtCurdebt.getText()); // not saved
         return customer;
     }   
     
@@ -201,46 +211,48 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
         jLabel6 = new javax.swing.JLabel();
         m_jTaxID = new javax.swing.JTextField();
         jLabel7 = new javax.swing.JLabel();
+        jLabel8 = new javax.swing.JLabel();
+        m_jSearchkey = new javax.swing.JTextField();
 
         setLayout(null);
 
         jLabel3.setText(AppLocal.getIntString("label.name")); // NOI18N
         add(jLabel3);
-        jLabel3.setBounds(20, 50, 140, 15);
+        jLabel3.setBounds(20, 80, 140, 15);
         add(m_jName);
-        m_jName.setBounds(160, 50, 270, 19);
+        m_jName.setBounds(160, 80, 270, 19);
 
         jLabel12.setText(AppLocal.getIntString("label.notes")); // NOI18N
         add(jLabel12);
-        jLabel12.setBounds(20, 190, 140, 15);
+        jLabel12.setBounds(20, 220, 140, 15);
 
         jScrollPane1.setViewportView(m_jNotes);
 
         add(jScrollPane1);
-        jScrollPane1.setBounds(160, 190, 270, 70);
+        jScrollPane1.setBounds(160, 220, 270, 70);
 
         jLabel13.setText(AppLocal.getIntString("label.address")); // NOI18N
         add(jLabel13);
-        jLabel13.setBounds(20, 110, 140, 15);
+        jLabel13.setBounds(20, 140, 140, 15);
 
         jScrollPane2.setViewportView(m_jAddress);
 
         add(jScrollPane2);
-        jScrollPane2.setBounds(160, 110, 270, 70);
+        jScrollPane2.setBounds(160, 140, 270, 70);
 
         jLabel4.setText(AppLocal.getIntString("label.visible")); // NOI18N
         add(jLabel4);
-        jLabel4.setBounds(20, 360, 140, 15);
+        jLabel4.setBounds(20, 390, 140, 15);
         add(m_jVisible);
-        m_jVisible.setBounds(160, 360, 140, 20);
+        m_jVisible.setBounds(160, 390, 140, 20);
 
         jLabel5.setText(AppLocal.getIntString("label.card")); // NOI18N
         add(jLabel5);
-        jLabel5.setBounds(20, 80, 140, 15);
+        jLabel5.setBounds(20, 110, 140, 15);
 
         jcard.setEditable(false);
         add(jcard);
-        jcard.setBounds(160, 80, 270, 19);
+        jcard.setBounds(160, 110, 270, 19);
 
         jButton2.setIcon(new javax.swing.ImageIcon(getClass().getResource("/com/openbravo/images/color_line16.png"))); // NOI18N
         jButton2.addActionListener(new java.awt.event.ActionListener() {
@@ -249,7 +261,7 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
             }
         });
         add(jButton2);
-        jButton2.setBounds(440, 80, 50, 26);
+        jButton2.setBounds(440, 110, 50, 26);
 
         jButton3.setIcon(new javax.swing.ImageIcon(getClass().getResource("/com/openbravo/images/fileclose.png"))); // NOI18N
         jButton3.addActionListener(new java.awt.event.ActionListener() {
@@ -258,39 +270,45 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
             }
         });
         add(jButton3);
-        jButton3.setBounds(500, 80, 50, 26);
+        jButton3.setBounds(500, 110, 50, 26);
 
         jLabel1.setText(AppLocal.getIntString("label.maxdebt")); // NOI18N
         add(jLabel1);
-        jLabel1.setBounds(20, 270, 140, 15);
+        jLabel1.setBounds(20, 300, 140, 15);
 
         txtMaxdebt.setHorizontalAlignment(javax.swing.JTextField.RIGHT);
         add(txtMaxdebt);
-        txtMaxdebt.setBounds(160, 270, 130, 19);
+        txtMaxdebt.setBounds(160, 300, 130, 19);
 
         jLabel2.setText(AppLocal.getIntString("label.curdebt")); // NOI18N
         add(jLabel2);
-        jLabel2.setBounds(20, 300, 140, 15);
+        jLabel2.setBounds(20, 330, 140, 15);
 
         txtCurdebt.setEditable(false);
         txtCurdebt.setHorizontalAlignment(javax.swing.JTextField.RIGHT);
         add(txtCurdebt);
-        txtCurdebt.setBounds(160, 300, 130, 19);
+        txtCurdebt.setBounds(160, 330, 130, 19);
 
         txtCurdate.setEditable(false);
         txtCurdate.setHorizontalAlignment(javax.swing.JTextField.CENTER);
         add(txtCurdate);
-        txtCurdate.setBounds(160, 330, 130, 19);
+        txtCurdate.setBounds(160, 360, 130, 19);
 
         jLabel6.setText(AppLocal.getIntString("label.curdate")); // NOI18N
         add(jLabel6);
-        jLabel6.setBounds(20, 330, 140, 15);
+        jLabel6.setBounds(20, 360, 140, 15);
         add(m_jTaxID);
         m_jTaxID.setBounds(160, 20, 270, 19);
 
         jLabel7.setText(AppLocal.getIntString("label.taxid")); // NOI18N
         add(jLabel7);
         jLabel7.setBounds(20, 20, 140, 15);
+
+        jLabel8.setText(AppLocal.getIntString("label.searchkey")); // NOI18N
+        add(jLabel8);
+        jLabel8.setBounds(20, 50, 140, 15);
+        add(m_jSearchkey);
+        m_jSearchkey.setBounds(160, 50, 270, 19);
     }// </editor-fold>//GEN-END:initComponents
 
     private void jButton2ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton2ActionPerformed
@@ -320,12 +338,14 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
     private javax.swing.JLabel jLabel5;
     private javax.swing.JLabel jLabel6;
     private javax.swing.JLabel jLabel7;
+    private javax.swing.JLabel jLabel8;
     private javax.swing.JScrollPane jScrollPane1;
     private javax.swing.JScrollPane jScrollPane2;
     private javax.swing.JTextField jcard;
     private javax.swing.JTextArea m_jAddress;
     private javax.swing.JTextField m_jName;
     private javax.swing.JTextArea m_jNotes;
+    private javax.swing.JTextField m_jSearchkey;
     private javax.swing.JTextField m_jTaxID;
     private javax.swing.JCheckBox m_jVisible;
     private javax.swing.JTextField txtCurdate;
